syntax = "proto3";

package dev.httpmarco.polocloud.explanation.cluster;

import "dev/httpmarco/polocloud/explanation/utils.proto";

service ClusterSuiteService {
  rpc attachSuite(ClusterSuiteAttachRequest) returns (ClusterSuiteAttachResponse);
  rpc requestState(EmptyCall) returns (ClusterSuiteStateResponse);
  rpc drainCluster(SuiteDrainRequest) returns (EmptyCall);
  rpc runtimeHandshake(SuiteRuntimeHandShakeRequest) returns (EmptyCall);
}

message ClusterSuiteAttachRequest {
  string suiteId = 1;
  string suitePrivateKey = 2;
}

message ClusterSuiteAttachResponse {
  bool success = 1;
  string message = 2;
  string token = 3;
}

message SuiteDrainRequest {
  string id = 1;
}

message SuiteRuntimeHandShakeRequest {
  string id = 1;
  string privateKey = 2;
  string hostname = 3;
  int32 port = 4;
}

message ClusterSuiteStateResponse {
  State state = 1;
}

enum State {
    OFFLINE = 0;
    INITIALIZING = 1;
    INVALID = 3;
    AVAILABLE = 4;
}


